apply plugin: 'java'
apply plugin: 'maven'

group = 'com.github.gdyanry'

sourceCompatibility = 1.8

repositories {
    jcenter()
}

dependencies {
}
